--- a/manifest-registration.yml
+++ b/manifest-registration.yml
@@ -2,7 +2,7 @@ applications:
 - name: tracker-registration
   path: ./applications/registration-server/build/libs/registration-server.jar
   routes:
-  - route: registration-pal-jrb.apps.pikes.pal.pivotal.io
+  - route: registration-pal-amc.apps.pikes.pal.pivotal.io
   memory: 1G
   instances: 1
   services:
